# pdfmanager

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  supervisord.conf
.github/: dependabot.yml
.github/workflows/: build-image.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/server/: app.py  cli.py  const.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  models.py  repositories.py  runtime.py  settings.py
backend/server/infrastructure/: pdf.py  search.py  storage.py  utils.py
backend/server/infrastructure/database/: __init__.py  alembic.ini  alembic_commands.py  base.py  configurations.py  interface.py  runner.py
backend/server/infrastructure/database/alembic/: env.py  script.py.mako
backend/server/infrastructure/database/alembic/versions/sqlite/: 2026_03_27_1648-d8a333667539_initial.py  2026_04_09_1831-8e49615039a4_oidc.py  2026_04_19_2005-c8afa0f76ca2_initial.py
backend/server/infrastructure/logging/: __init__.py  loggers.py  logging.yaml
backend/server/routes/: __init__.py  _assemblers.py  _responses.py  account.py  auth.py  identity.py  library.py  search.py  setup.py
backend/server/schemas/: account.py  auth.py  config.py  general.py  identity.py  library.py  query.py  search.py  security.py  types.py
backend/server/security/: loader.py  manager.py  oidc.py  password.py  tokens.py
backend/server/services/: auth.py  identity.py  indexing.py  library.py  storage.py  token.py  user.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/api/@tanstack/: react-query.gen.ts
frontend/src/common/: error.tsx
frontend/src/common/auth/: guard.tsx  hooks.ts  tokens.ts
frontend/src/common/state/: hooks.ts  loader.tsx
frontend/src/components/ui/: button.tsx  color-mode.tsx  display.tsx  error.tsx  feedback.tsx  modal.tsx  model.tsx  navlink.tsx  password-input.tsx  provider.tsx  searchBar.tsx
frontend/src/config/: api.ts  const.ts  query.ts  theme.ts
frontend/src/hooks/: form.tsx  query.tsx  url.tsx
frontend/src/pages/: layout.tsx
frontend/src/pages/account/: index.tsx  preferences.tsx  profile.tsx
frontend/src/pages/admin/: layout.tsx
frontend/src/pages/auth/: expired.tsx  login.tsx  logout.tsx
frontend/src/pages/error/: 404.tsx  500.tsx  dynamic.tsx
frontend/src/pages/setup/: index.tsx  user.tsx
frontend/src/routes/: index.tsx
frontend/src/store/: global.tsx
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
(+13 files in other folders)
